--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
    "toolkit": "classic",
    "theme": "theme-triton-191d3d43-adfa-48bc-b336-64830464d6fe",
    "requires": [
-      "font-awesome"
+      "font-awesome",
+      "calendar"
    ],
    "indexHtmlPath": "index.html",
    "classpath": [
